Fix: Improved vertical spacing.

--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -7,7 +7,7 @@
 }
 
 .domain-filter {
-    min-height: 160px;
+    min-height: 120px;
 }
 
 .raw-value {
@@ -15,8 +15,8 @@
 }
 
 .scrollable-list {
-    min-height: 165px;
-    max-height: 165px;
+    min-height: 125px;
+    max-height: 125px;
     overflow-x: hidden;
 }
 
